force-app/main/default/objects/PGi_Client__c/PGi_Client__c.object-meta.xml
<CustomObject>
    <label>PGi Client</label>
    <nameField>
        <label>PGi Client ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PGi Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>