force-app/main/default/objects/PGi_Client__c/fields/AdminFlagtext__c.field-meta.xml
<CustomField>
    <fullName>AdminFlagtext__c</fullName>
    <label>Admin Flag (text)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>