force-app/main/default/objects/PGi_Client__c/fields/Bill_To_Case_Count__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Case_Count__c</fullName>
    <label>Bill To Case Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>