force-app/main/default/objects/PGi_Client__c/fields/Case_Count__c.field-meta.xml
<CustomField>
    <fullName>Case_Count__c</fullName>
    <formula>PGi_Client_Case_Count__c + Bill_To_Case_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>