force-app/main/default/objects/PGi_Client__c/fields/Client_Email__c.field-meta.xml
<CustomField>
    <fullName>Client_Email__c</fullName>
    <externalId>true</externalId>
    <label>Client Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>