force-app/main/default/objects/PGi_Client__c/fields/PGi_Client_Case_Count__c.field-meta.xml
<CustomField>
    <fullName>PGi_Client_Case_Count__c</fullName>
    <label>PGi Client Case Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>