force-app/main/default/objects/PGi_Client__c/fields/PGi_Company__c.field-meta.xml
<CustomField>
    <fullName>PGi_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PGi Company</label>
    <referenceTo>PGi_Company__c</referenceTo>
    <relationshipLabel>PGi Clients</relationshipLabel>
    <relationshipName>PGi_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>