force-app/main/default/objects/PGi_Client__c/fields/PGi_Company_a_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>PGi_Company_a_Placeholder__c</fullName>
    <formula>PGi_Company__r.Placeholder__c</formula>
    <label>PGi Company a Placeholder</label>
    <type>Checkbox</type>
</CustomField>