force-app/main/default/objects/PGi_Client__c/fields/PGi_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>PGi_Company_ID__c</fullName>
    <label>PGi Company ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>