force-app/main/default/objects/PGi_Client__c/fields/Red_Flag_Date__c.field-meta.xml
<CustomField>
    <fullName>Red_Flag_Date__c</fullName>
    <label>Red Flag Date</label>
    <type>Date</type>
</CustomField>