force-app/main/default/objects/PGi_Client__c/fields/Sales_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_Email__c</fullName>
    <label>Sales Person Email</label>
    <type>Email</type>
</CustomField>