force-app/main/default/objects/PGi_Client__c/fields/Special_Info__c.field-meta.xml
<CustomField>
    <fullName>Special_Info__c</fullName>
    <label>Special Info</label>
    <type>TextArea</type>
</CustomField>