force-app/main/default/objects/PGi_Client__c/fields/Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Territory_Code__c</fullName>
    <label>Territory Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>