force-app/main/default/objects/PGi_Client__c/listViews/Placeholders.listView-meta.xml
<ListView>
    <fullName>Placeholders</fullName>
    <columns>NAME</columns>
    <columns>Client_Name__c</columns>
    <columns>PGi_Company__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notContain</operation>
        <value>BI</value>
    </filters>
    <filters>
        <field>Special_Info__c</field>
        <operation>contains</operation>
        <value>placeholder</value>
    </filters>
    <label>Placeholders</label>
    <language>en_US</language>
</ListView>